--- a/szablony/główna.html
+++ b/szablony/główna.html
@@ -6,6 +6,7 @@
 <h1>Działy</h1>
 {dzialy}
 </ul>
+<a href=/rejestracja.py>Rejestracja</a>
 <form action=/szukaj.py method=get>
 <input type=text name=q />
 <input type=submit />
