--- a/szablony/główna.html
+++ b/szablony/główna.html
@@ -2,6 +2,9 @@
 <title>Polskie forum Opery</title>
 <meta charset=utf8>
 <link href=/zasoby/arkusz.css rel=stylesheet>
+<p class=powiadomienie>
+To forum jest kopią forum polskiej społeczności Opery, pierwotnie dostępnego w serwisie my.opera.com.
+</p>
 <ul>
 <h1>Działy</h1>
 {dzialy}
