najnowsze wpisy na głównej

--- a/szablony/główna.html
+++ b/szablony/główna.html
@@ -6,8 +6,12 @@
 To forum jest kopią forum polskiej społeczności Opery, pierwotnie dostępnego w serwisie my.opera.com.
 </p>
 <ul>
-<h1>Działy</h1>
+<h2>Działy</h2>
 {dzialy}
+</ul>
+<ul>
+<h2>Ostatnie wpisy</h2>
+{najnowsze}
 </ul>
 <a href=/rejestracja.py>Rejestracja</a>
 <form action=/szukaj.py method=get>
