--- a/szablony/dział.html
+++ b/szablony/dział.html
@@ -4,6 +4,7 @@
 <meta charset=utf8>
 <link href=/zasoby/arkusz.css rel=stylesheet>
 <ul>
+<a href=/nowy_wątek.py?dzial={nr_dzialu}>Nowy wątek</a>
 <h1>{nazwa}</h1>
 {watki}
 </ul>
