--- a/szablony/dział.html
+++ b/szablony/dział.html
@@ -3,6 +3,7 @@
 <ul>
 <meta charset=utf8>
 <link href=/zasoby/arkusz.css rel=stylesheet>
+<link href=/wpisy.atom rel=alternate title="Najnowsze wpisy" type=application/atom+xml />
 <ul>
 <a href=/nowy_wątek.py?dzial={nr_dzialu}>Nowy wątek</a>
 <h1>{nazwa}</h1>
