--- a/szablony/główna.html
+++ b/szablony/główna.html
@@ -2,9 +2,9 @@
 <title>Polskie forum Opery</title>
 <meta charset=utf8>
 <link href=/zasoby/arkusz.css rel=stylesheet>
-<p class=powiadomienie>
-To forum jest kopią forum polskiej społeczności Opery, pierwotnie dostępnego w serwisie my.opera.com.
-</p>
+<link href=/wpisy.atom rel=alternate title="Najnowsze wpisy" type=application/atom+xml />
+<p class=powiadomienie>To forum jest kopią forum polskiej społeczności Opery, pierwotnie dostępnego w serwisie my.opera.com.</p>
+<p class=powiadomienie>Nowe wpisy można śledzić za pomocą <a href=/wpisy.atom>kanału wiadomości</a>.</p>
 <ul>
 <h2>Działy</h2>
 {dzialy}
