--- a/szablony/wątek.html
+++ b/szablony/wątek.html
@@ -2,6 +2,7 @@
 <title>{tytul}</title>
 <meta charset=utf8>
 <link href=/zasoby/arkusz.css rel=stylesheet>
+<link href=/wpisy.atom rel=alternate title="Najnowsze wpisy" type=application/atom+xml />
 <h1>{tytul}</h1>
 <span class=działNadrzędny>w <a href=dział.py?{nr_dzialu}>dziale {nazwa_dzialu}</a></span>
 {zamkniety}
