wyświetlanie liczby wyświetleń wątku

--- a/szablony/dział-wątek.html
+++ b/szablony/dział-wątek.html
@@ -1,1 +1,1 @@
-<li><a href=/wątek.py?{nr}>{zamknieto}{tytul}</a>
+<tr><td><a href=/wątek.py?{nr}>{zamknieto}{tytul}</a><td class=liczba>{wyswietlen}
