--- a/szablony/dział.html
+++ b/szablony/dział.html
@@ -4,9 +4,10 @@
 <meta charset=utf8>
 <link href=/zasoby/arkusz.css rel=stylesheet>
 <link href=/wpisy.atom rel=alternate title="Najnowsze wpisy" type=application/atom+xml />
-<ul>
-<a href=/nowy_wątek.py?dzial={nr_dzialu}>Nowy wątek</a>
 <h1>{nazwa}</h1>
+<a href=/nowy_wątek.py?dzial={nr_dzialu}>Nowy wątek</a>
+<table>
+<tr><th>Temat<th>Wyświetleń
 {watki}
-</ul>
+</table>
 <footer><nav><a href=/ >Strona główna</a></nav></footer>
