--- a/szablony/główna.html
+++ b/szablony/główna.html
@@ -1,35 +1,38 @@
 <!DOCTYPE HTML>
 <head>
-  <title>Polskie forum Opery</title>
-  <meta charset="utf-8">
-  <link href="/zasoby/arkusz.css" rel="stylesheet">
-  <link href="/wpisy.atom" rel=alternate title="Najnowsze wpisy" type="application/atom+xml" />
+	<title>Polskie forum Opery</title>
+	<meta charset="utf-8">
+	<link href="/zasoby/arkusz.css" rel="stylesheet">
+	<link href="/wpisy.atom" rel=alternate title="Najnowsze wpisy" type="application/atom+xml" />
 </head>
 <body>
 
 <header>
-  <a href="http://forumopery.pythonanywhere.com/">
-    <h1>Archiwum polskiego forum Opery</h1>
-  </a>
+	<a href="http://forumopery.pythonanywhere.com/">
+		<h1>
+			<span>O</span>
+			Archiwum polskiego forum Opery
+		</h1>
+	</a>
 </header>
 
 <p class=powiadomienie>To forum jest kopią forum polskiej społeczności Opery, pierwotnie dostępnego w serwisie my.opera.com.</p>
 <p class=powiadomienie>Nowe wpisy można śledzić za pomocą <a href="/wpisy.atom">kanału wiadomości</a>.</p>
 
 <ul>
-  <h2>Działy</h2>
-  {dzialy}
+	<h2>Działy</h2>
+	{dzialy}
 </ul>
 
 <ul>
-  <h2>Ostatnie wpisy</h2>
-  {najnowsze}
+	<h2>Ostatnie wpisy</h2>
+	{najnowsze}
 </ul>
 
 <a href="/rejestracja.py">Rejestracja</a>
 <form action="/szukaj.py" method=get>
-  <input type=text name=q />
-  <input type=submit />
+	<input type=text name=q />
+	<input type=submit />
 </form>
 
 </body>
