--- a/szablony/nagłówek.html
+++ b/szablony/nagłówek.html
@@ -5,8 +5,10 @@
 			Archiwum polskiego forum Opery
 		</h1>
 	</a>
-	<p class=powiadomienie>To forum jest kopią forum polskiej społeczności Opery, pierwotnie dostępnego w serwisie my.opera.com.</p>
-	<p class=powiadomienie>Nowe wpisy można śledzić za pomocą <a href="/wpisy.atom">kanału wiadomości</a>.</p>
+	<div class=powiadomienie>
+		<p>To forum jest kopią forum polskiej społeczności Opery, pierwotnie dostępnego w serwisie my.opera.com, którą sporządził <a href="https://vivaldi.net/community/profile/saskatchewan">Saskatchewan</a>, a w Internecie umieścił <a href="mailto:chocimir@t.pl">Chocimir</a>.</p>
+		<p>Nowe wpisy można śledzić za pomocą <a href="/wpisy.atom">kanału wiadomości</a>.</p>
+	</div>
 	<a href="/rejestracja.py">Rejestracja</a>
 	<form action="/szukaj.py" method=get>
 		<input type=text name=q />
