--- a/szablony/dział.html
+++ b/szablony/dział.html
@@ -5,9 +5,11 @@
 <link href=/zasoby/arkusz.css rel=stylesheet>
 <link href=/wpisy.atom rel=alternate title="Najnowsze wpisy" type=application/atom+xml />
 <h1>{nazwa}</h1>
-<a href=/nowy_wątek.py?dzial={nr_dzialu}>Nowy wątek</a>
+<nav>
+	<a href=/ >Strona główna</a>
+	<a href=/nowy_wątek.py?dzial={nr_dzialu}>Nowy wątek</a>
+</nav>
 <table>
 <tr><th>Temat<th>Wyświetleń
 {watki}
 </table>
-<footer><nav><a href=/ >Strona główna</a></nav></footer>
