--- a/szablony/nagłówek.html
+++ b/szablony/nagłówek.html
@@ -1,7 +1,7 @@
 <header>
-	<a href="http://forumopery.pythonanywhere.com/">
+	<a href="http://forumopery.pythonanywhere.com/" class="łączeNagłówkowe">
 		<h1>
-			<span>O</span>
+			<span class="O">O</span>
 			Archiwum polskiego forum Opery
 		</h1>
 	</a>
@@ -9,9 +9,11 @@
 		<p>To forum jest kopią forum polskiej społeczności Opery, pierwotnie dostępnego w serwisie my.opera.com, którą sporządził <a href="https://vivaldi.net/community/profile/saskatchewan">Saskatchewan</a>, a w Internecie umieścił <a href="mailto:chocimir@t.pl">Chocimir</a>.</p>
 		<p>Nowe wpisy można śledzić za pomocą <a href="/wpisy.atom">kanału wiadomości</a>.</p>
 	</div>
-	<a href="/rejestracja.py">Rejestracja</a>
-	<form action="/szukaj.py" method=get>
-		<input type=text name=q />
-		<input type=submit name=Szukaj />
-	</form>
+	<nav>
+		<a href="/rejestracja.py">Rejestracja</a>
+		<form action="/szukaj.py" method=get class="szukajka">
+			<input type=text name=q />
+			<input type=submit name=Szukaj />
+		</form>
+	</nav>
 </header>
