--- a/szablony/wątek.html
+++ b/szablony/wątek.html
@@ -6,6 +6,7 @@
 <h1>{tytul}</h1>
 <span class=działNadrzędny>w <a href=dział.py?{nr_dzialu}>dziale {nazwa_dzialu}</a></span>
 {zamkniety}
+<nav><a href=/ >Strona główna</a></nav>
 <main>
 {wpisy}
 </main>
@@ -15,4 +16,3 @@
 <input type=hidden name=wątek value={nr_watku} />
 <input type=submit />
 </form>
-<footer><nav><a href=/ >Strona główna</a></nav></footer>
