ładne ścieżki wg pomysłu Saskatchewana

--- a/szablony/dział.html
+++ b/szablony/dział.html
@@ -7,7 +7,7 @@
 <h1>{nazwa}</h1>
 <nav>
 	<a href=/ >Strona główna</a>
-	<a href=/nowy_wątek.py?dzial={nr_dzialu}>Nowy wątek</a>
+	<a href=/nowy_wątek?dzial={nr_dzialu}>Nowy wątek</a>
 </nav>
 <table>
 <tr><th>Temat<th>Wyświetleń
