--- a/szablony/nagłówek.html
+++ b/szablony/nagłówek.html
@@ -10,8 +10,8 @@
 		<p>Nowe wpisy można śledzić za pomocą <a href="/wpisy.atom">kanału wiadomości</a>.</p>
 	</div>
 	<nav>
-		<a href="/rejestracja.py">Rejestracja</a>
-		<form action="/szukaj.py" method=get class="szukajka">
+		<a href="/rejestracja">Rejestracja</a>
+		<form action="/szukaj" method=get class="szukajka">
 			<input type=text name=q />
 			<input type=submit name=Szukaj />
 		</form>
