--- a/szablony/nowy_wątek.html
+++ b/szablony/nowy_wątek.html
@@ -3,7 +3,7 @@
 <meta charset=utf8>
 <link href=/zasoby/arkusz.css rel=stylesheet>
 <h1>Nowy wątek</h1>
-<form action=nowywpis.py method=post>
+<form action=/nowywpis method=post>
 <label>Ksywka: <input type=text name=ksywka /></label> <label>Hasło: <input type=password name=hasło /></label><br/>
 <label>Tytuł: <input type=text name=tytuł /></label>
 <label>Dział: <select name=nr_działu>{dzialy}</select></label>
