--- a/szablony/dział-wątek.html
+++ b/szablony/dział-wątek.html
@@ -1,1 +1,1 @@
-<tr><td><a href=/wątek.py?{nr}>{zamknieto}{tytul}</a><td class=liczba>{wyswietlen}
+<tr><td><a href=/wątek/{nr}>{zamknieto}{tytul}</a><td class=liczba>{wyswietlen}
