--- a/szablony/rejestracja.html
+++ b/szablony/rejestracja.html
@@ -2,7 +2,7 @@
 <title>Polskie forum Opery</title>
 <meta charset=utf8>
 <link href=/zasoby/arkusz.css rel=stylesheet>
-<form action=/rejestracja.py method=post>
+<form action=/rejestracja method=post>
 <h1>Rejestracja na forum</h1>
 <p class=powiadomienie>{wiadomosc}</p>
 <label>Ksywka: <input type=text name=ksywka value="{ksywka}" /></label>
